--- a/doc/dissertation/resources/evaluation.tex
+++ b/doc/dissertation/resources/evaluation.tex
@@ -7,6 +7,11 @@ This section will include:
     \item Concluding with discussion of the major successes and failures of the ABSOL system.
 \end{itemize}
 
+% Flaws of the metalanguage:
+%   - No direct use of environment accesses in basic semantics, requiring indirection.
+%   - Fairly awkward use of the environment (no ability to delete properties, for example). 
+%   - Grammar admits some nonsensical terms such as alternations with semantics not at the top-level. These are ignored by the metacompiler, but are inelegant. Ideally this would not be allowed by the grammar at all.
+
 % Contributions
 % Failures
 
